@@ -12,6 +12,7 @@ Changes:
 - Add Ukrainian translation to webgui.
 - Add encrypt/decrypt password in System|Backup/Restore.
 - Add service Samba Active Directory Domain Controller.
+- Add custom mount for GPT label and UFS formatted ZFS volume.
 - Create 4KB(ashift=12) ZFS pool by default.
 - Improve software raid info pages with Ajax.
 - Increase upload size in Webserver service up to 16GiB. (websrv_maxrequestsize)
